--- a/promises/ricky&morty.html
+++ b/promises/ricky&morty.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="ricky&morty.css">
-</head>
-<body>
-    <div class="button-container">
-    <button class="press">Press</button>
-</div>
-    <div class="wrapper"></div>
+    <link rel="stylesheet" href="ricky&morty.css" />
+  </head>
+  <body>
+    <div class="main">
+      <div class="button-container">
+        <button class="press">Press</button>
+      </div>
+      <div class="wrapper"></div>
+    </div>
 
     <script src="ricky&morty.js"></script>
-</body>
+  </body>
 </html>
