--- a/tv-maze/index.html
+++ b/tv-maze/index.html
@@ -10,11 +10,13 @@
     <header>
       <h1 class="bitShow">BitShow</h1>
       <input type="text" placeholder="Search" class="search" />
+      <!-- <div class="results"></div> -->
     </header>
     <div class="main">
       <h1>Popular Shows</h1>
       <div class="container"></div>
     </div>
+    <div class="absolute hide"></div>
     <footer>
       <p class="copy">
         Copyright <img src="/icons8-copyright-16.png" alt="" class="pic" /> Bit
