--- a/tv-maze/movieInfo.html
+++ b/tv-maze/movieInfo.html
@@ -7,22 +7,33 @@
     <link rel="stylesheet" href="movieInfo.css" />
   </head>
   <body>
+    <div class="first">
     <header>
       <h1 class="bitShow">BitShow</h1>
       <input type="text" placeholder="Search" class="search" />
     </header>
+    <div class="main">
     <p></p>
+    <div class="container">
     <div class="image-container">
       <img src="" alt="" />
     </div>
+    <div class="seasons-list"></div>
+  </div>
+  <div class="summary-div">
     <h2 class="details">Show Details</h2>
     <p class="summary"></p>
+  </div>
+    
+    
     <footer>
       <p class="copy">
         Copyright <img src="/icons8-copyright-16.png" alt="" class="pic" /> Bit
         Student 2024
       </p>
     </footer>
+  </div>
+</div>
     <script src="movieInfo.js"></script>
   </body>
 </html>
